syntax = "proto3";
package ie.gmit.ds;
import "google/protobuf/wrappers.proto";
//import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "ie.gmit.ds";

service PasswordService {
   rpc hash(HashInput) returns (HashOutput);
   rpc validate(ValidateInput) returns (google.protobuf.BoolValue);
}

message HashOutput {
    int32 userId = 1;
    bytes hashedPassword = 2;
    bytes salt = 3;
}

message HashInput {
    int32 userId = 1;
    string password = 2;
}

message ValidateInput {
    string password = 1;
    bytes hashedPassword = 2;
    bytes salt = 3;
}

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}